[ANW-301] Fix for overlapping.

--- a/drupal/sites/all/themes/custom/nas/css/app.css
+++ b/drupal/sites/all/themes/custom/nas/css/app.css
@@ -8575,23 +8575,21 @@ body.node-type-slideshow #tabs {
 .conservation-strategy-projects-block .editorial-card {
   margin-bottom: 20px;
 }
-@media only screen and (min-width: 768px) {
-  .conservation-strategy-projects-block .columns:nth-of-type(4n+1) {
-    clear: both;
-  }
+.conservation-strategy-projects-block .projects-list .columns:nth-of-type(3n+1) {
+  clear: both;
 }
 @media only screen and (min-width: 601px) and (max-width: 767px) {
-  .conservation-strategy-projects-block .columns .editorial-card {
+  .conservation-strategy-projects-block .projects-list .columns .editorial-card {
     min-height: inherit !important;
   }
 }
 @media only screen and (min-width: 480px) and (max-width: 600px) {
-  .conservation-strategy-projects-block .columns .editorial-card {
+  .conservation-strategy-projects-block .projects-list .columns .editorial-card {
     min-height: inherit !important;
   }
 }
 @media only screen and (max-width: 479px) {
-  .conservation-strategy-projects-block .columns .editorial-card {
+  .conservation-strategy-projects-block .projects-list .columns .editorial-card {
     min-height: inherit !important;
   }
 }
